examples/test/testpolicy17736.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17736
  namespace: namespace13
spec:
  podSelector:
    matchLabels:
      key16: value27
      key46: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value42
          key39: value7
          key42: value29
      podSelector:
        matchLabels:
          key0: value31
          key7: value39
          key4: value35
